Closed Bug 931428 Opened 12 years ago Closed 12 years ago

GStreamerLoader.cpp:47:24: error: ‘nullptr’ was not declared in this scope

Categories

(Core :: General, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28
Tracking Status
firefox27 --- fixed
firefox28 --- fixed

People

(Reporter: wgianopoulos, Assigned: wgianopoulos)

References

Details

(Keywords: regression, Whiteboard: [qa-])

Attachments

(1 file)

Another nullptr issue.
Attached patch PatchSplinter Review
Attachment #822848 - Flags: review?
Attachment #822848 - Flags: review? → review?(ehsan)
Status: NEW → ASSIGNED
Attachment #822848 - Flags: review?(ehsan) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Comment on attachment 822848 [details] [diff] [review] Patch [Approval Request Comment] Bug caused by (feature/regressing bug #): 784739 User impact if declined: released source will not compile with GCC 4.5 Testing completed (on m-c, etc.): Patch has been on mozilla-central since 10/28/2013 Risk to taking this patch (and alternatives if risky): very little risk trivial fix String or IDL/UUID changes made by this patch: none
Attachment #822848 - Flags: approval-mozilla-beta?
I nominated this because it seems from comments in bug 931427 that there is an intention to have the beta and released source compile under GCC 4.5.
Attachment #822848 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: