Bug 931428 - Include NullPtr.h in GStreamerLoader.cpp. r=ehsan, a=bajaj