content/media/gstreamer/GStreamerLoader.cpp
@@ -7,6 +7,7 @@
 #include <stdio.h>
 
 #include "GStreamerLoader.h"
+#include "mozilla/NullPtr.h"
 
 #define LIBGSTREAMER 0
 #define LIBGSTAPP 1
